--- a/CSS/IniciarSesion.css
+++ b/CSS/IniciarSesion.css
@@ -65,7 +65,7 @@ form .text_field{
 .pass:hover{
     text-decoration: underline;
 }
-input[type= "submit"]{
+button{
     width: 100%;
     height: 50%;
     border: 1px solid;
@@ -79,7 +79,7 @@ input[type= "submit"]{
 
 }
 
-input[type="submit"]:hover{
+button:hover{
     border-color: #006f9b;
     transition: .5s;
 }
