--- a/CSS/Articulo.css
+++ b/CSS/Articulo.css
@@ -1,5 +1,11 @@
 .article{
-    width: 75%;
+    width: 100%;
+}
+
+.Photo-article{
+    width: 100%;
+    height: 20rem;
+    overflow: hidden;
 }
 
 .Title-article{
@@ -7,5 +13,6 @@
 }
 
 .Text-article{
-    padding: 3rem;
+    padding-left: 15rem;
+    padding-right: 15rem;
 }
