--- a/CSS/Bitacora.css
+++ b/CSS/Bitacora.css
@@ -1,34 +1,44 @@
-
-
 main{
-    
     display: flex;
     flex-wrap: wrap;
 }
 
-.barra-navegation{
-    background-color: #ffb9d5;
-    padding: 2rem;
-    width: 20%;
-    height: 100%;
+input{
+    border-radius: 20px;
+    border-color: #ffffff;
+    color: #3e4455;
+    box-shadow: 0px 2.5px 5px rgba(0, 0, 0, 0.50);
+    margin-bottom: 1rem;
+    cursor: text;
 }
 
-.barra-navegation h3 a{
-    font-size: 18px;
-    color: #ff0062;
-    text-transform: capitalize;
-    margin-bottom: 30px;
-    font-weight: 500;
-    position: relative;
-    text-decoration: none;
+select{
+    border-radius: 20px;
+    border-color: #ffffff;
+    color: #7f99f8;
+    box-shadow: 0px 2.5px 5px rgba(0, 0, 0, 0.50);
+    margin: 0.5rem;
+    cursor:pointer;
+}
+
+.barra-navegation{
+    padding-left: 30%;
+    padding-top: 2rem;
+    width: 100%;
 }
 
 .barra-navegation ul{
     list-style: none;
+    overflow: hidden;
 }
 
-.barra-navegation ul li:not(:last-child){
-    margin-bottom: 10px;
+.Vinculo{
+    width: 20%;
+    float: left;
+}
+
+.barra-navegation ul li{
+    display: inline-block;
 }
 
 .barra-navegation ul li a{
@@ -38,39 +48,72 @@ main{
     text-decoration: none;
     font-weight: 300;
     display: block;
-    transition-delay: all 0.3s ease;
 }
 
 .barra-navegation ul li a:hover{
     color: #006f9b;
-    padding-left: 10px;
-}
-
-.Foto{
-    width: 100%;
-    border-radius: 50%;
-}
-
-.Foto img{
-    border-radius: 50%;
+    font-size: 18px;
 }
 
 .Bitacora{
-    width: 60%;
-    padding: 5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    width: 100%;
+    height: 50rem;
+    overflow: hidden;
 }
 
 .Registro{
     align-items: center;
     text-align: center;
+    width: 30%;
+    height: 45%;
     padding: 1rem;
-    margin: 2rem;
-    background-color: #a79bad;
+    margin: 1rem;
+    border-width: 0.2rem;
+    box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.50);
+    background-color: #7f99f8;
     border-radius: 1rem;
+    float: left;
+}
+
+.Registro h3{
+    color: #becdff;
+}
+
+.Registro p{
+    color: #ffffff;
+}
+
+#Hoy{
+    padding-top: 5rem;
 }
 
 button{
     margin: 1rem;
     width: 30%;
     height: 2rem;
+    background: none;
+    border-radius: 25px;
+    border-color: #ffffff;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.50);
+    color: #ffffff;
+}
+
+button:hover{
+    background-color: #a385cf;
+    cursor: pointer;
+}
+
+.Contenido{
+    height: 2rem;
+    width: 20rem;
+}
+
+.Text{
+    transform: translateY(-100%);
+}
+
+.Boton{
+    transform: translateY(-100%);
 }
