--- a/CSS/IniciarSesion.css
+++ b/CSS/IniciarSesion.css
@@ -1,12 +1,30 @@
 .Botones-login h1{
     text-align: center;
     padding: 0 0 20px 0;
-    border-bottom: 1px solid #006f9b;
+    border-bottom: 1px solid #0344C3;
 }
 
 .Botones-login form{
     padding: 0 40px;
     box-sizing: border-box;
+}
+
+.Login{
+    color: #ffffff;
+    border-style: hidden;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.50);
+    width: 40%;
+    height: 2rem;
+}
+
+.Login a{
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.Login:hover{
+    background-color: #57B9ED;
+    cursor: pointer;
 }
 
 form .text_field{
@@ -42,13 +60,13 @@ form .text_field{
     left: 0;
     width: 100%;
     height: 2px;
-    background-color:#006f9b;
+    background-color:#0344C3;
 }
 
 .text_field input:focus ~ label,
 .text_field input:valid ~ label{
     top: -5px;
-    color: #2691d9;
+    color: #0344C3;
 }
 
 .text_field input:focus ~ span::before,
@@ -58,7 +76,7 @@ form .text_field{
 
 .pass{
     margin: -5px 0 20px 5px;
-    color:aqua;
+    color:#57B9ED;
     cursor: pointer;
 }
 
@@ -69,7 +87,7 @@ button{
     width: 100%;
     height: 50%;
     border: 1px solid;
-    background: #006f9b;
+    background: #0344C3;
     border-radius: 25px;
     font-size: 18px;
     color:#64ccf4;
@@ -80,7 +98,7 @@ button{
 }
 
 button:hover{
-    border-color: #006f9b;
+    border-color: #0344C3;
     transition: .5s;
 }
 
@@ -90,8 +108,14 @@ button:hover{
 
 .registrarse a{
     border-top: 10px;
-    color: #006f9b;
+    color: #0344C3;
     text-decoration: none;
+}
+
+.registrarse a:hover{
+    color: #57B9ED;
+    transition: .5s;
+    text-decoration:underline;
 }
 
 .Nacimiento{
@@ -102,4 +126,8 @@ button:hover{
     height: 2rem;
     border: none;
     background: none;
+}
+
+.Botones-login{
+    padding: 4rem;
 }
