--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -1,49 +1,103 @@
 main{
     background-color: #f4ecf6;
-    padding: 5rem;
+    padding-top: 3rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
     display: flex;
     flex-wrap: wrap;
 }
 
+.Contenedor{
+    display: flex;
+    border-radius: 1rem;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.50);
+    overflow: hidden;
+}
+
 .Botones-login{
     align-items: center;
+    text-align: center;
+    justify-content: center;
     padding: 1rem;
-    border-top-left-radius: 1rem;
-    border-bottom-left-radius: 1rem;
-    background-color: #a4ebf3;
-    width: 45%;
+    width: 50%;
+    height: 35rem;
 }
 
 .Titulo-login{
-    background-color: #f4c0ec;
     text-align: center;
-    padding: 1rem;
-    border-top-right-radius: 1rem;
-    border-bottom-right-radius: 1rem;
+    overflow: hidden;
     border-color: black;
-    width: 45%;
+    width: 50%;
+    height: 35rem;
+}
+
+.Menu{
+    padding: 4rem;
+}
+
+.Log{
+    padding-top: 3rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
+
+.Log img{
+    width: 65%;
+}
+
+.Pic{
+}
+
+.Pic img{
+    width: 65%;
 }
 
 .Blogin{
     margin: 1rem;
-    width: 90%;
-    height: 5rem;
+    width: 65%;
+    height: 4rem;
     border: 1px solid;
-    background: #006f9b;
+    background: #0344C3;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.50);
     border-radius: 25px;
     font-size: 18px;
-    color:#64ccf4;
+    color:#ffffff;
     font-weight: 700;
     cursor: pointer;
     outline: none;
 } 
 
 .Blogin:hover{
-    border-color: #006f9b;
+    border-color: #0344C3;
+    box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.50);
+    background-color: #57B9ED;
+    color: #0344C3;
     transition: .5s;
 }
 
 .Blogin a{
     color: white;
     text-decoration: none;
+}
+
+.BLog{
+    width: 60%;
+    height: 2rem;
+    border: 1px solid;
+    background: #0344C3;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.50);
+    border-radius: 25px;
+    font-size: 12px;
+    color:#ffffff;
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
+}
+
+.BLog:hover{
+    border-color: #0344C3;
+    box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.50);
+    background-color: #57B9ED;
+    color: #0344C3;
+    transition: .5s;
 }
