--- a/CSS/Topic.css
+++ b/CSS/Topic.css
@@ -1,29 +1,29 @@
-.main{
+body{
+    font-family:Georgia, impact, Times, serif;
+    color:rgb(49, 49, 49);
+    box-sizing: border-box;
+}
+
+main{
+    
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.Topics{
+    width: 100%;
+    padding-right: 2rem;
 
 }
-.list-articles{
- padding: 3rem;
- width: 65%;
-}
-.element-article{
-    color: white;
-    align-items: center;
+
+.Topic{
+    margin-left: 8rem;
+    margin-right: 4rem;
     text-align: center;
-    width: 100%;
-    height: 10rem;
-    margin: 2rem;
+    width: 30%;
+    float:left;
 }
 
-.Title-element{
-    width: 100%;
-    padding-top: 2rem;
-}
-
-.Title-element :hover{
-    background-color: rgba(0, 0, 0, 0.24);
-}
-
-.Title-element h2 a{
-    color: white;
-    text-decoration: none;
+.Capa h3{
+    padding-top: 16rem;
 }
