--- a/4IV8_Proyecto_Aula_Equipo6_Codyrep-master/CSS/main.css
+++ b/4IV8_Proyecto_Aula_Equipo6_Codyrep-master/CSS/main.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 *{
     box-sizing: border-box;
 }
@@ -6,6 +10,21 @@ body{
     font-family: 'Staatliches', cursive;
     color:rgb(49, 49, 49);
     box-sizing: border-box;
+}
+button{
+    font-family: 'Staatliches', cursive;
+    padding: 16px;
+    font-size: 16px;
+    border-radius: 7px;
+    background-color: #39bbee;
+    color: white;
+    border: none;
+}
+button:hover{
+    background-color: #ff2d7e;
+}
+button a{
+    text-decoration: none;
 }
 
 header{
@@ -232,3 +251,53 @@ footer{
     font-size: 25px;
     
 }
+main{
+    justify-content: space-evenly;
+}
+/*----- dropdowns -----*/
+.dropbtn {
+    background-color: #39bbee;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    margin: 0px auto;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {
+    background-color: #ff2d7e;
+  }
